--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,4 @@
 REACT_APP_GRAPHCMS_ACCESS_URL = <MY_SECRET_GRAPHCMS_URL>
 REACT_APP_GRAPHCMS_ACCESS_TOKEN = <MY_SECRET_GRAPHCMS_AUTH_TOKEN>
+REACT_APP_AUTH0_DOMAIN = <AUTH0_DOMAIN>
+REACT_APP_AUTH0_CLIENT_ID = <AUTH0_CLIENT_ID>
